refactor: remove dead code